kubernetes/apps/vault-system/vault/app/tlsroute.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TLSRoute
metadata:
  name: vault
  namespace: vault-system
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: infra
      sectionName: tls-passthrough
  hostnames: ["vault.home.mattprovost.dev"]
  rules:
    - backendRefs:
        - name: vault-active
          port: 8200
